--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,9 +42,12 @@ import Layout from '../components/layout.astro';
   font-size: 1rem;
   font-weight: 600;
   margin: 0;
+  color: red;
 }
 
-
+.button {
+  background-color: #333;
+}
 </style>
 
 <Layout
