link bgcolor changed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import Layout from '../components/layout.astro';
   color: red;
 }
 
-.button {
+a.button {
   background-color: #333;
 }
 </style>
