--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ import Layout from '../components/layout.astro';
 }
 
 a.button {
-  background-color: #333;
+  background-color: #333 !important;
 }
 </style>
 
