--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import Layout from '../components/layout.astro';
   color: red;
 }
 
-a.button {
+.button {
   background-color: #333 !important;
 }
 </style>
